<resources>
    <string name="app_name">GttCheck</string>

    <!--Drop down menu items-->
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign out</string>

    <!--Add / Edit Case Fragment-->
    <string name="btn_add_text">Done</string>
    <string name="id_num_starting_text">000</string>
    <string name="label_select_name">Select a name</string>
    <string name="label_select_iv">Add an IV</string>
    <string name="label_select_rx">Add an Rx</string>

    <!--Add / Edit Case Name-->
    <string name="edit_text_hint_name">Create a unique identifier</string>

    <!--Case Overview Item-->
    <string name="label_case_iv">IV</string>
    <string name="label_case_rx">Rx</string>

    <!--IV Group-->
    <string name="label_iv_group">IV</string>
    <string name="menu_iv_group_add_rx">Add Rx</string>
    <string name="menu_iv_group_delete_rx">Delete Rx</string>
    <string name="menu_iv_group_delete_iv_group">Delete IV</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_case">AddCaseActivity</string>

</resources>
