<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zark.gttcheck.AddCaseFrag">


    <FrameLayout
        android:id="@+id/frame_rx_edit"
        android:layout_width="@dimen/circle_case_overview"
        android:layout_height="@dimen/circle_case_overview"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/circle_case_overview"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_case_rx"
            android:textColor="@color/colorCasesRVTextLightLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_details_count_rx_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorCasesRVTextDarkLabel"
            tools:text="0" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_iv"
        android:layout_width="@dimen/circle_case_overview"
        android:layout_height="@dimen/circle_case_overview"
        android:layout_marginRight="8dp"
        android:background="@drawable/circle_case_overview"
        app:layout_constraintBottom_toTopOf="@+id/frame_rx_edit"
        app:layout_constraintRight_toLeftOf="@+id/frame_rx_edit"
        app:layout_constraintTop_toBottomOf="@+id/frame_rx_edit">

        <TextView
            android:id="@+id/tv_label_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_case_iv"
            android:textColor="@color/colorCasesRVTextLightLabel" />

        <TextView
            android:id="@+id/tv_details_count_iv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorCasesRVTextDarkLabel"
            tools:text="0" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_id_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/outline_cases_id_number"
        app:layout_constraintBottom_toTopOf="@+id/frame_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_iv">

        <TextView
            android:id="@+id/tv_details_id_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/id_num_starting_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorCasesRVTextDarkLabel"
            tools:text="@string/id_num_starting_text" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorCasesRVLightSteelBlue"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_rx_edit">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorCasesRVLightSteelBlue"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorCasesRVLightSteelBlue"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_add_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/btn_add_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />

    </FrameLayout>


</android.support.constraint.ConstraintLayout>
